Restore completed v1 files