@@ -23,90 +23,61 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
-/**
- * SecurityConfig - Configures Spring Security
- * Sets up authentication, authorization, JWT filter, CORS, etc.
- */
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity // Enables @PreAuthorize, @Secured annotations
+@EnableMethodSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
     private final CustomUserDetailsService userDetailsService;
 
-    /**
-     * Configure Security Filter Chain
-     * Defines which endpoints are public and which require authentication
-     */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // Disable CSRF (not needed for stateless JWT authentication)
                 .csrf(csrf -> csrf.disable())
-
-                // Configure CORS
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-                // Configure authorization rules
                 .authorizeHttpRequests(auth -> auth
-                        // Public endpoints (no authentication required)
+                        .requestMatchers("/api/superadmin/**").hasRole("SUPER_ADMIN")
+                        .requestMatchers("/api/config/**").permitAll()
                         .requestMatchers(
-                                "/api/auth/**",           // Registration, Login
-                                "/api/public/**",         // Any public endpoints
-                                "/error",                 // Error pages
-                                "/actuator/**",            // Health check endpoints (if using Spring Boot Actuator)
-                                "/uploads/**"
-
+                                "/api/auth/**",
+                                "/api/public/**",
+                                "/error",
+                                "/actuator/**",
+                                "/uploads/**",
+                                "/api/payment/callback", // ToyyibPay callback — called by ToyyibPay server (no JWT)
+                                "/ws/**" //websocket
                         ).permitAll()
 
-                        // All other endpoints require authentication
+                        .requestMatchers("/api/notifications/stream").authenticated()
+
                         .anyRequest().authenticated()
                 )
-
-                // Use stateless session (no server-side sessions)
                 .sessionManagement(session -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
-
-                // Set authentication provider
                 .authenticationProvider(authenticationProvider())
-
-                // Add JWT filter before UsernamePasswordAuthenticationFilter
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    /**
-     * Configure CORS (Cross-Origin Resource Sharing)
-     * Allows frontend (React) to communicate with backend
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Allow requests from React frontend (adjust port if needed)
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5173",  // Vite default port
-                "http://localhost:3000",   // Alternative React port
+        configuration.setAllowedOriginPatterns(Arrays.asList(
+                "http://localhost:5173",
+                "http://localhost:3000",
                 "https://mpp-rental-frontend.vercel.app",
                 "https://*.vercel.app"
         ));
 
-        // Allow these HTTP methods
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-
-        // Allow these headers
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
-
-
-        // Allow credentials (cookies, authorization headers)
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
         configuration.setAllowCredentials(true);
-
-        // How long browser can cache CORS response
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -115,32 +86,18 @@ public class SecurityConfig {
         return source;
     }
 
-    /**
-     * Password Encoder Bean
-     * Uses BCrypt for hashing passwords
-     */
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    /**
-     * Authentication Provider
-     * Tells Spring Security how to authenticate users
-     */
     @Bean
     public AuthenticationProvider authenticationProvider() {
-        // Pass userDetailsService to constructor
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider(userDetailsService);
-        // Set password encoder
         authProvider.setPasswordEncoder(passwordEncoder());
         return authProvider;
     }
 
-    /**
-     * Authentication Manager Bean
-     * Used for programmatic authentication (e.g., in login endpoint)
-     */
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
